# BankingAIAssistent

./: .env.example  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  pyproject.toml
backend/: requirements.txt
backend/app/: config.py  main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: auth.py  chat.py  feedback.py
backend/app/application/: container.py
backend/app/application/dto/: chat.py  feedback.py
backend/app/application/use_cases/: chat.py  feedback.py  health.py  login.py
backend/app/domain/: user.py
backend/app/domain/entities/: agent_state.py  document.py  message.py  user.py
backend/app/domain/ports/: agent_port.py  auth_port.py  llm_port.py  mcp_port.py  memory_port.py  observability_port.py  python_analysis_port.py  vector_store_port.py
backend/app/domain/services/: approval_gate.py  guardrails.py  tool_authorization.py
backend/app/domain/value_objects/: role.py
backend/app/infrastructure/agent/: langgraph_orchestrator.py  stub_orchestrator.py
backend/app/infrastructure/auth/: hardcoded_auth.py  jwt_service.py
backend/app/infrastructure/llm/: openai_adapter.py
data/: feedback.db  long_term_memory.db
data/mock_documents/: database_pool_tuning_guide.json  escalation_matrix.json  incident_payment_outage_2024_03.json  on_call_handbook.json  payment_outage_runbook.json  payment_sla_policy.json  postmortem_template.json
frontend/: requirements.txt  streamlit_app.py
mcp_server/: server.py
mcp_server/data/: employees.json  incidents.json  service_catalog.json
tests/: test_app_import.py
(+15 files in other folders)
