[project]
name = "bankingaiassistent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "pydantic-settings>=2.14.2",
    "uvicorn[standard]>=0.32.0",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "backend"
module-name = ["app"]

[tool.uv]
package = true
