[project]
name = "bankingaiassistent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "langsmith>=0.10.2",
    "pinecone-client>=5.0.0",
    "pydantic-settings>=2.6.0",
    "pyjwt>=2.9.0",
    "rank-bm25>=0.2.2",
    "streamlit>=1.59.1",
    "uvicorn[standard]>=0.32.0",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "backend"
module-name = ["app"]

[tool.uv]
package = true
